--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "easy-ts-api",
-    "version": "1.0.3",
+    "version": "1.0.3-ad",
     "description": "Api Server with open api interface",
     "main": "esm2015/index.js",
     "module": "./esm2015/index.js",
@@ -40,6 +40,7 @@
     "homepage": "https://github.com/tsiresymila16/-api-server#readme",
     "dependencies": {
         "@types/cookie": "^0.4.1",
+        "@types/glob": "^7.2.0",
         "@types/globby": "^9.1.0",
         "@types/jsonwebtoken": "^8.5.5",
         "@types/multer": "^1.4.7",
