--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "easy-ts-api",
-    "version": "1.0.3-ad",
+    "version": "1.0.4",
     "description": "Api Server with open api interface",
     "main": "esm2015/index.js",
     "module": "./esm2015/index.js",
@@ -57,6 +57,7 @@
         "fastify": "^3.23.0",
         "fastify-cookie": "^5.3.2",
         "fastify-express": "^0.3.3",
+        "fastify-socket.io": "^3.0.0",
         "fastify-static": "^4.5.0",
         "fastify-swagger": "^4.12.6",
         "glob": "^7.2.0",
@@ -70,6 +71,7 @@
         "reflect-metadata": "^0.1.13",
         "sequelize": "^6.11.0",
         "sequelize-typescript": "^2.1.1",
+        "socket.io": "^4.4.0",
         "swagger-ui-express": "^4.1.6"
     },
     "devDependencies": {
@@ -77,6 +79,7 @@
         "@types/cookie-session": "^2.0.43",
         "@types/express": "^4.17.13",
         "@types/node": "^16.11.10",
+        "@types/swagger-ui-express": "^4.1.3",
         "@types/validator": "^13.7.0",
         "typescript": "^4.4.4"
     }
