--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "easy-ts-api",
-    "version": "1.0.4",
+    "version": "1.0.6",
     "description": "Api Server with open api interface",
     "main": "esm2015/index.js",
-    "module": "./esm2015/index.js",
+    "module": "esm2015/index.js",
     "types": "esm2015",
     "scripts": {
         "dev": "nodemon -L exemple/index.ts",
