--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "easy-ts-api",
-    "version": "1.0.7-a",
+    "version": "1.0.8-a",
     "description": "Api Server with open api interface",
     "main": "esm2015/index.js",
     "module": "esm2015/index.js",
@@ -55,6 +55,7 @@
         "cookie-parser": "^1.4.5",
         "cookie-session": "^1.4.0",
         "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
@@ -79,8 +80,10 @@
         "swagger-ui-express": "^4.1.6"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/cookie-parser": "^1.4.2",
         "@types/cookie-session": "^2.0.43",
+        "@types/crypto-js": "^4.0.2",
         "@types/express": "^4.17.13",
         "@types/node": "^16.11.10",
         "@types/swagger-ui-express": "^4.1.3",
