--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "easy-ts-api",
-    "version": "2.0.1",
+    "version": "2.0.1-a",
     "description": "Api Server with open api interface",
     "main": "esm2015/index.js",
     "module": "esm2015/index.js",
