--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "easy-ts-api",
-    "version": "2.0.1-a",
+    "version": "2.0.1-d",
     "description": "Api Server with open api interface",
     "main": "esm2015/index.js",
     "module": "esm2015/index.js",
@@ -47,16 +47,19 @@
         "@types/glob": "^7.2.0",
         "@types/globby": "^9.1.0",
         "@types/jsonwebtoken": "^8.5.5",
+        "@types/mime": "^2.0.3",
         "@types/multer": "^1.4.7",
         "@types/swagger-schema-official": "^2.0.22",
         "body-parser": "^1.19.0",
         "class-transformer": "^0.5.1",
+        "cli-color": "^2.0.1",
         "cookie": "^0.4.1",
         "cookie-parser": "^1.4.5",
         "cookie-session": "^1.4.0",
         "cors": "^2.8.5",
         "crypto-js": "^4.1.1",
         "dotenv": "^10.0.0",
+        "edge.js": "^5.3.3",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "fastify": "^3.23.0",
@@ -66,19 +69,24 @@
         "fastify-socket.io": "^3.0.0",
         "fastify-static": "^4.5.0",
         "fastify-swagger": "^4.12.6",
+        "fs-extra": "^10.0.1",
         "glob": "^7.2.0",
         "globby": "^12.0.2",
         "globule": "^1.3.3",
         "jsonwebtoken": "^8.5.1",
         "middie": "^5.3.0",
+        "mime": "^3.0.0",
         "multer": "^1.4.3",
         "mysql2": "^2.3.3",
         "path-to-regexp": "^6.2.0",
+        "point-of-view": "^5.1.0",
         "reflect-metadata": "^0.1.13",
         "sequelize": "^6.11.0",
         "sequelize-typescript": "^2.1.1",
         "socket.io": "^4.4.0",
-        "swagger-ui-express": "^4.1.6"
+        "swagger-ui-express": "^4.1.6",
+        "twing": "^5.1.0",
+        "yargs": "^17.3.1"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
@@ -90,5 +98,8 @@
         "@types/swagger-ui-express": "^4.1.3",
         "@types/validator": "^13.7.0",
         "typescript": "^4.4.4"
+    },
+    "bin": {
+        "easy-ts": "./bin/easy-ts"
     }
 }
